[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15"
sqlx = { version = "0.7", features = ["chrono", "postgres", "runtime-tokio-native-tls", "uuid"] }
hyper = "1.6.0"
uuid = { version = "1.15.1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
